--- a/AyoubAPI-main/package.json
+++ b/AyoubAPI-main/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "node-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "ayoub-api-v2",
+  "version": "2.0.0",
+  "description": "Advanced Node.js API with Users and Products management, featuring CRUD operations, authentication, and advanced search capabilities",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["api", "nodejs", "express", "mongodb", "crud", "authentication"],
+  "author": "Ayoub El Gazal",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^6.12.5"
+    "mongoose": "^7.6.3",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "validator": "^13.11.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.1"
   }
 }
