--- a/AyoubAPI-main/package.json
+++ b/AyoubAPI-main/package.json
@@ -8,18 +8,26 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["api", "nodejs", "express", "mongodb", "crud", "authentication"],
+  "keywords": [
+    "api",
+    "nodejs",
+    "express",
+    "mongodb",
+    "crud",
+    "authentication"
+  ],
   "author": "Ayoub El Gazal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "validator": "^13.11.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
